<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_install_md2_0"
    android:paddingTop="@dimen/internal_action_bar_size"
    android:paddingBottom="@dimen/l2"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:fitsSystemWindowsInsets="bottom">
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="@dimen/l_50"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:tag="binding_1"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/l1"
            android:layout_marginEnd="@dimen/l1"
            style="@style/WidgetFoundation.Card">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:tag="binding_2"
                        android:layout_marginStart="@dimen/l_25"
                        app:srcCompat="@drawable/ic_check_circle_md2"
                        style="@style/WidgetFoundation.Icon"/>
                    <TextView
                        android:textAppearance="@style/AppearanceFoundation.Body"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/install_options_title"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/l1"/>
                    <Button
                        android:tag="binding_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install_next"
                        style="@style/WidgetFoundation.Button.Text"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:tag="binding_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/l_50"
                    android:layout_marginBottom="@dimen/l_50"
                    android:paddingStart="3dp"
                    android:paddingEnd="3dp"
                    android:layout_marginStart="@dimen/l1"
                    android:layout_marginEnd="@dimen/l1">
                    <CheckBox
                        android:tag="binding_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/keep_dm_verity"
                        style="@style/WidgetFoundation.Checkbox"/>
                    <CheckBox
                        android:tag="binding_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/keep_force_encryption"
                        app:tint="?attr/colorPrimary"
                        style="@style/WidgetFoundation.Checkbox"/>
                    <CheckBox
                        android:tag="binding_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovery_mode"
                        app:tint="?attr/colorPrimary"
                        style="@style/WidgetFoundation.Checkbox"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/l1"
            android:layout_marginStart="@dimen/l1"
            android:layout_marginEnd="@dimen/l1"
            style="@style/WidgetFoundation.Card">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:tag="binding_8"
                        android:layout_marginStart="@dimen/l_25"
                        app:srcCompat="@drawable/ic_check_circle_md2"
                        style="@style/WidgetFoundation.Icon"/>
                    <TextView
                        android:textAppearance="@style/AppearanceFoundation.Body"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/install_method_title"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/l1"/>
                    <Button
                        android:tag="binding_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/install_start"
                        app:icon="@drawable/ic_forth_md2"
                        app:iconGravity="textEnd"
                        style="@style/WidgetFoundation.Button.Text"/>
                </LinearLayout>
                <RadioGroup
                    android:tag="binding_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/l_50"
                    android:layout_marginBottom="@dimen/l_50"
                    android:paddingStart="3dp"
                    android:paddingEnd="3dp"
                    android:layout_marginStart="@dimen/l1"
                    android:layout_marginEnd="@dimen/l1">
                    <RadioButton
                        android:id="@+id/method_patch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_patch_file"
                        style="@style/WidgetFoundation.RadioButton"/>
                    <RadioButton
                        android:id="@+id/method_direct"
                        android:tag="binding_11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/direct_install"
                        style="@style/WidgetFoundation.RadioButton"/>
                    <RadioButton
                        android:id="@+id/method_inactive_slot"
                        android:tag="binding_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/install_inactive_slot"
                        style="@style/WidgetFoundation.RadioButton"/>
                </RadioGroup>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:tag="binding_13"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/l1"
            android:layout_marginStart="@dimen/l1"
            android:layout_marginEnd="@dimen/l1"
            style="@style/WidgetFoundation.Card">
            <TextView
                android:textAppearance="@style/AppearanceFoundation.Caption"
                android:id="@+id/release_notes"
                android:tag="binding_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:breakStrategy="simple"
                android:hyphenationFrequency="none"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
