<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/include_home_manager_0"
    android:focusable="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/WidgetFoundation.Card">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="@dimen/l_50"
        android:paddingBottom="@dimen/l_50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/l1"
        android:paddingEnd="@dimen/l1">
        <ImageView
            android:id="@+id/home_manager_icon"
            android:padding="@dimen/l_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_manager"
            style="@style/WidgetFoundation.Icon.Primary"/>
        <TextView
            android:textAppearance="@style/AppearanceFoundation.Title"
            android:textColor="?attr/colorPrimary"
            android:ellipsize="end"
            android:id="@+id/home_manager_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_app_title"
            android:maxLines="1"
            android:layout_marginStart="@dimen/l1"
            app:layout_constraintBottom_toBottomOf="@+id/home_manager_icon"
            app:layout_constraintEnd_toStartOf="@+id/home_manager_button"
            app:layout_constraintStart_toEndOf="@+id/home_manager_icon"
            app:layout_constraintTop_toTopOf="parent"/>
        <FrameLayout
            android:id="@+id/home_manager_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/home_manager_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/home_manager_title">
            <Button
                android:layout_gravity="end"
                android:tag="binding_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textAllCaps="false"
                app:icon="@drawable/ic_update_md2"
                style="@style/WidgetFoundation.Button"/>
            <Button
                android:layout_gravity="end"
                android:tag="binding_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install"
                android:textAllCaps="false"
                app:icon="@drawable/ic_install"
                style="@style/WidgetFoundation.Button.Text"/>
        </FrameLayout>
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/home_manager_title_barrier"
            android:tag="binding_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"/>
        <HorizontalScrollView
            android:scrollbars="none"
            android:fadingEdgeLength="@dimen/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:requiresFadingEdge="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/home_manager_title_barrier">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/home_manager_latest_version"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        style="@style/W.Home.Item.Top">
                        <TextView
                            android:text="@string/home_latest_version"
                            style="@style/W.Home.ItemContent"/>
                        <TextView
                            android:tag="binding_4"
                            style="@style/W.Home.ItemContent.Right"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/home_manager_installed_version"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/home_manager_latest_version"
                        style="@style/W.Home.Item">
                        <TextView
                            android:text="@string/home_installed_version"
                            style="@style/W.Home.ItemContent"/>
                        <TextView
                            android:tag="binding_5"
                            style="@style/W.Home.ItemContent.Right"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/home_manager_internal_connection"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/home_manager_installed_version"
                        style="@style/W.Home.Item.Bottom">
                        <TextView
                            android:text="@string/home_package"
                            style="@style/W.Home.ItemContent"/>
                        <TextView
                            android:id="@+id/home_manager_extra_connection_value"
                            android:tag="binding_6"
                            style="@style/W.Home.ItemContent.Right"/>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <ProgressBar
                    android:layout_gravity="bottom"
                    android:tag="binding_7"
                    android:layout_width="match_parent"
                    android:max="100"
                    style="@style/WidgetFoundation.ProgressBar"/>
            </LinearLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
